--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1 class="header-title">Cuaca  Wilayah Indonesia</h1>
+      <h1 class="header-title">Cuaca Wilayah Indonesia</h1>
       <button id="dark-mode-toggle" class="btn-dark-mode" aria-label="Toggle Dark Mode">
         <i class="bi bi-moon-fill"></i>
       </button>
@@ -56,6 +56,7 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="./js/bookmarks.js"></script>
   <script type="module" src="./js/wilayah.js"></script>
 </body>
 </html>
